--- a/style.css
+++ b/style.css
@@ -3,8 +3,20 @@
     text-align: center;
     font-size: 2rem;
     font-weight: bold;
+    box-shadow: 5px 5px 15px  5px #4f73e9; 
+    padding: 15px;
+    border-radius: 15px;
+    background-color: hsl(0, 0%, 79%);
 }
 
+body{
+    background-color: hsl(0, 15%, 88%);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    margin: 0;
+}
 button{
     font-size: 1.5rem;
     padding: 10px 15px;
